# zr

./: CMakeLists.txt  README.rst
cmake/: ExternalAntlr4Cpp.cmake
grammar/: zr.g4  zr.interp  zr.tokens  zrBaseListener.cpp  zrBaseListener.h  zrBaseVisitor.cpp  zrBaseVisitor.h  zrLexer.cpp  zrLexer.h  zrLexer.interp  zrLexer.tokens  zrListener.cpp  zrListener.h  zrParser.cpp  zrParser.h  zrVisitor.cpp  zrVisitor.h
input/: in  in1  in10  in2  in3  in4  in5  in6  in7  in8  in9  o1  o4  o5  o8  out2  out8  out9  test.sh
src/: BoolLiteral.cpp  BoolLiteral.h  CompileException.cpp  CompileException.h  Compiler.cpp  Compiler.h  ContextValue.cpp  ContextValue.h  FuncArg.cpp  IntLiteral.cpp  IntLiteral.h  Literal.h  Scope.cpp  Scope.h  Type.h  Variable.cpp  Variable.h  Visitor.cpp  Visitor.h  jit.h  llvm.h  main.cpp
src/opt/: const_propag.cpp  const_propag.h  dead_code.cpp  dead_code.h  dead_inst.cpp  dead_inst.h  func_inlining.cpp  func_inlining.h  tail_call.cpp  tail_call.h  useless_bb.cpp  useless_bb.h
